--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "name": "angular-tour-of-heroes",
   "version": "0.0.0",
+  "engines": {
+    "node": "8.11.4",
+    "npm": "6.4.1"
+  },
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
