--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "engines": {
     "node": "8.11.4",
-    "npm": "6.4.1"
+    "npm": "6.4.1",
+    "angular": "7.0.3"
   },
   "scripts": {
     "ng": "ng",
